--- a/css/main.css
+++ b/css/main.css
@@ -3,20 +3,27 @@ html {
     font-size: 62.5%;
     box-sizing: border-box;
 }
-*, *:before, *:after {
+
+*,
+*:before,
+*:after {
     box-sizing: inherit;
 }
+
 * {
     margin: 0;
     padding: 0;
 }
+
 body {
     background-color: #202124;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 ul li {
     list-style: none;
 }
+
 a {
     color: #fff;
     font-size: 1.3rem;
@@ -29,11 +36,13 @@ a {
     width: 100%;
     height: 6rem;
 }
+
 .nav {
     display: flex;
     justify-content: flex-end;
     padding: 1.5rem 0;
 }
+
 .nav__flex {
     width: 25rem;
     height: auto;
@@ -42,23 +51,100 @@ a {
     align-items: center;
     gap: 1.5rem;
 }
+
 .menu-icon {
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
     width: 2.5rem;
     height: 2.5rem;
-    color: rgba(255,255,255,0.87);
+    color: rgba(255, 255, 255, 0.87);
     fill: currentColor;
-    opacity: 1  ;
+    opacity: 1;
     margin-left: 1rem;
 }
-.menu-perfil img{
+
+.menu-perfil img {
     border-radius: 50%;
     margin-left: 1rem;
 }
+
 .nav__links:hover {
     border-bottom: 1px solid #fff;
 }
 
 /* Main */
+main {
+    margin-top: 15rem;
+    text-align: center;
+}
+
+main .main-logo {
+    width: 53rem;
+    margin: 0 auto;
+    margin-bottom: 2.5rem;
+}
+
+main .main-logo img {
+    max-height: 100%;
+    max-width: 100%;
+    object-fit: contain;
+    object-position: center bottom;
+    width: auto;
+}
+
+main .main-input {
+    width: 60rem;
+    margin: 0 auto;
+    margin-bottom: 3.5rem;
+}
+
+main .main-input-container {
+    width: 58.2rem;
+    height: 4.5rem;
+    border-radius: 2.4rem;
+    border: 1px solid #5f6368;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+main .main-input-container:hover {
+    background-color: #303134;
+    box-shadow: 0 1px 6px 0 #171717;
+    border-color: rgba(223, 225, 229, 0);
+}
+
+main .main-input input {
+    width: 48rem;
+    height: 4rem;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    color: #e8eaed;
+    font-size: 1.6rem;
+}
+
+main .main-input-container .search-icon {
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    width: 2rem;
+    height: 2rem;
+    color: #9aa0a6;
+    fill: currentColor;
+    opacity: 1;
+    margin-right: 1rem;
+}
+
+main .main-input-container .micro-icon {    
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    width: 2.5rem;
+    height: 2.5rem;
+    fill: currentColor;
+    opacity: 1;
+}
+
+/* Botones */
