--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,7 @@ a {
     background-size: contain;
     width: 2.5rem;
     height: 2.5rem;
-    color: rgba(255, 255, 255, 0.87);
+    color: rgba(255,255,255,0.87);
     fill: currentColor;
     opacity: 1;
     margin-left: 1rem;
@@ -75,7 +75,7 @@ a {
 
 /* Main */
 main {
-    margin-top: 15rem;
+    margin-top: 12.3rem;
     text-align: center;
 }
 
@@ -94,14 +94,14 @@ main .main-logo img {
 }
 
 main .main-input {
-    width: 60rem;
+    width: 58rem;
     margin: 0 auto;
-    margin-bottom: 3.5rem;
+    margin-bottom: 1rem;
 }
 
 main .main-input-container {
     width: 58.2rem;
-    height: 4.5rem;
+    height: 4.4rem;
     border-radius: 2.4rem;
     border: 1px solid #5f6368;
     display: flex;
@@ -116,7 +116,7 @@ main .main-input-container:hover {
 }
 
 main .main-input input {
-    width: 48rem;
+    width: 50rem;
     height: 4rem;
     background-color: transparent;
     border: none;
@@ -148,3 +148,48 @@ main .main-input-container .micro-icon {
 }
 
 /* Botones */
+.main-buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: .5rem;
+}
+.main-buttons_search,
+.main-buttons_luck{
+    background-color: #303134;
+    border: 1px solid #303134;
+    border-radius: .4rem;
+    color: #e8eaed;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.4rem;
+    height: 3.6rem;
+    min-width: 5.4rem;
+    margin: 1.1rem .4rem;
+    padding: 0 1.6rem;
+    text-align: center;
+    cursor: pointer;
+    user-select: none;
+}
+.main-buttons_search:hover,
+.main-buttons_luck:hover {
+    border: 1px solid #5f6368;
+}
+.lenguaje {
+    flex-grow: 1;
+}
+.lenguaje-1 {
+    flex-shrink: 0;
+    box-sizing: border-box;
+}
+.lenguaje-spam {
+    text-align: center;
+    color: #bdc1c6;
+    line-height: 2.8rem;
+    font-size: small;
+    margin-top: 2rem;
+}
+.lenguaje-spam a {
+    color: #8ab4f8;
+    text-decoration: none;
+    padding: 0 .3rem;
+}
