--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,7 @@ a {
     background-size: contain;
     width: 2.5rem;
     height: 2.5rem;
-    color: rgba(255,255,255,0.87);
+    color: rgba(255, 255, 255, 0.87);
     fill: currentColor;
     opacity: 1;
     margin-left: 1rem;
@@ -70,7 +70,7 @@ a {
 }
 
 .nav__links:hover {
-    border-bottom: 1px solid #fff;
+    text-decoration: underline;
 }
 
 /* Main */
@@ -137,7 +137,7 @@ main .main-input-container .search-icon {
     margin-right: 1rem;
 }
 
-main .main-input-container .micro-icon {    
+main .main-input-container .micro-icon {
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
@@ -152,35 +152,31 @@ main .main-input-container .micro-icon {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: .5rem;
+    gap: 0.5rem;
 }
+
 .main-buttons_search,
-.main-buttons_luck{
+.main-buttons_luck {
     background-color: #303134;
     border: 1px solid #303134;
-    border-radius: .4rem;
+    border-radius: 0.4rem;
     color: #e8eaed;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.4rem;
     height: 3.6rem;
     min-width: 5.4rem;
-    margin: 1.1rem .4rem;
+    margin: 1.1rem 0.4rem;
     padding: 0 1.6rem;
     text-align: center;
     cursor: pointer;
     user-select: none;
 }
+
 .main-buttons_search:hover,
 .main-buttons_luck:hover {
     border: 1px solid #5f6368;
 }
-.lenguaje {
-    flex-grow: 1;
-}
-.lenguaje-1 {
-    flex-shrink: 0;
-    box-sizing: border-box;
-}
+
 .lenguaje-spam {
     text-align: center;
     color: #bdc1c6;
@@ -188,8 +184,36 @@ main .main-input-container .micro-icon {
     font-size: small;
     margin-top: 2rem;
 }
+
 .lenguaje-spam a {
     color: #8ab4f8;
     text-decoration: none;
-    padding: 0 .3rem;
+    padding: 0 0.3rem;
+}
+
+/* Footer */
+.footer {
+    margin-top: 188px;
+    background-color: #171717;
+}
+.footer_country {
+    color: #9aa0a6;
+    font-size: 1.5rem;
+    padding: 1.5rem 3rem;
+    border-bottom: 1px solid #3c4043;
+}
+.footer_nav {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 1.5rem 1.5rem;
+}
+.footer_nav a{
+    color: #999da2;
+    font-size: 1.4rem;
+    padding: 0 2rem;
+    white-space: nowrap;
+}
+.footer_nav a:hover {
+    text-decoration: underline;
 }
